--- a/index.html
+++ b/index.html
@@ -1,251 +1,232 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Zs-Storage | Loja Oficial</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Loja De Fuja Do Tsunami</title>
 <style>
-body{
-    margin:0;
-    font-family:'Segoe UI', sans-serif;
-    background:radial-gradient(circle at top,#111,#050505);
-    color:white;
-    text-align:center;
-    overflow:hidden;
-}
+  /* Fundo preto e layout responsivo */
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
+    font-family: Arial, sans-serif;
+    color: white;
+    overflow: hidden; /* remove scroll da página inteira */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-/* ANIMAÇÃO FADE */
-.fade{
-    animation:fade 0.4s ease;
-}
+  h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 2em;
+    text-align: center;
+  }
 
-@keyframes fade{
-    from{opacity:0; transform:translateY(10px);}
-    to{opacity:1; transform:translateY(0);}
-}
+  .button-container {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
 
-/* NOME RGB */
-.rgb{
-    font-size:32px;
-    font-weight:900;
-    animation:rgb 6s linear infinite;
-    text-shadow:0 0 20px currentColor;
-}
+  button {
+    padding: 12px 30px;
+    font-size: 1em;
+    font-weight: bold;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s, border 0.2s;
+    outline: none;
+  }
 
-@keyframes rgb{
-    0%{color:#ff0000;}
-    25%{color:#a020f0;}
-    50%{color:#00ffff;}
-    75%{color:#ff00ff;}
-    100%{color:#ff0000;}
-}
+  #divino { background-color: #D4AF37; color: white; }
+  #infinity { background-color: #800080; color: rgb(255,0,255); }
 
-/* CUPOM */
-.cupomBtn{
-    position:absolute;
-    top:20px;
-    right:20px;
-    padding:8px 16px;
-    font-size:12px;
-    background:black;
-    border:2px solid #a020f0;
-    border-radius:20px;
-    color:#a020f0;
-    cursor:pointer;
-    box-shadow:0 0 15px #a020f0;
-    transition:0.3s;
-}
+  .neon { box-shadow: 0 0 10px #00ffff,0 0 20px #00ffff,0 0 30px #00ffff; border:2px solid #00ffff; }
 
-.cupomBtn:hover{
-    transform:scale(1.05);
-    box-shadow:0 0 25px #a020f0;
-}
+  button:hover { transform: translateY(-3px); box-shadow: 0 5px 15px rgba(0,0,0,0.4); }
 
-/* CENTRAL */
-.center{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    width:90%;
-    max-width:500px;
-}
+  /* Abas internas responsivas */
+  .tab {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    max-width: 600px;
+    height: calc(100vh - 120px); /* altura responsiva */
+    margin-bottom: 10px;
+  }
 
-/* BOTÕES PRINCIPAIS */
-.mainBtn{
-    width:100%;
-    padding:22px;
-    margin:20px 0;
-    font-size:20px;
-    font-weight:bold;
-    border-radius:20px;
-    cursor:pointer;
-    background:#111;
-    color:white;
-    border:2px solid #a020f0;
-    box-shadow:0 0 20px #a020f0;
-    transition:0.3s;
-}
+  .item-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    overflow-y: auto; /* scroll apenas aqui */
+    width: 100%;
+    padding: 5px;
+    flex-grow: 1;
+  }
 
-.mainBtn:hover{
-    transform:scale(1.05);
-    box-shadow:0 0 35px #a020f0;
-}
+  .item-container button {
+    width: 100%;
+    text-align: left;
+    background-color: #222;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 1em;
+  }
 
-/* BOX */
-.box{
-    margin:40px auto;
-    width:90%;
-    max-width:600px;
-    padding:30px;
-    border-radius:20px;
-    background:#0b0b0b;
-    border:2px solid #a020f0;
-    box-shadow:0 0 30px #a020f0;
-}
+  .item-container button:hover { background-color: #444; }
 
-/* ITENS */
-.item{
-    width:100%;
-    padding:14px;
-    margin:8px 0;
-    border-radius:14px;
-    background:#111;
-    color:white;
-    border:1px solid #a020f0;
-    box-shadow:0 0 12px #a020f0;
-    cursor:pointer;
-    transition:0.3s;
-}
+  .selected-item {
+    background-color: #111;
+    padding: 15px;
+    border-radius: 12px;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    word-wrap: break-word;
+  }
 
-.item:hover{
-    transform:scale(1.03);
-    box-shadow:0 0 22px #a020f0;
-}
+  .back-button {
+    margin-top: 10px;
+    padding: 10px 25px;
+    font-size: 1em;
+    border-radius: 10px;
+    background-color: #555;
+    color: white;
+    cursor: pointer;
+  }
 
-/* VOLTAR */
-.back{
-    margin-top:20px;
-    background:black;
-    color:#ff4444;
-    border:2px solid #ff4444;
-    padding:12px 20px;
-    border-radius:18px;
-    cursor:pointer;
-    transition:0.3s;
-}
+  .back-button:hover { background-color: #777; }
 
-.back:hover{
-    box-shadow:0 0 20px #ff4444;
-}
 </style>
 </head>
-
 <body>
 
-<!-- SONS -->
-<audio id="clickSound" src="https://www.myinstants.com/media/sounds/mouse-click.mp3"></audio>
-<audio id="openSound" src="https://www.myinstants.com/media/sounds/anime-wow-sound-effect.mp3"></audio>
+<h1>Loja De Fuja Do Tsunami</h1>
 
-<button class="cupomBtn" onclick="tocarClick(); alert('Sistema de cupom em breve')">Cupom</button>
-
-<div class="center fade" id="home">
-<div class="rgb">Zs-Storage</div>
-<p>🔥 Loja Oficial - Versão 3.0 🔥</p>
-
-<button class="mainBtn" onclick="abrirDivino()">DIVINO</button>
-<button class="mainBtn" onclick="abrirInfinity()">INFINITY</button>
+<div class="button-container" id="mainButtons">
+  <button id="divino">Divino</button>
+  <button id="infinity">Infinity</button>
 </div>
 
-<div id="divinoArea" style="display:none;">
-<div class="box fade">
-<h2>Divino - R$3,50</h2>
+<!-- Aba Divino -->
+<div class="tab" id="divinoTab">
+  <div class="item-container" id="divinoItems"></div>
+  <div class="selected-item" id="divinoSelected" style="display:none;"></div>
+  <button class="back-button" onclick="backToMain()">Voltar</button>
+</div>
+
+<!-- Aba Infinity -->
+<div class="tab" id="infinityTab">
+  <div class="item-container" id="infinityItems"></div>
+  <div class="selected-item" id="infinitySelected" style="display:none;"></div>
+  <button class="back-button" onclick="backToMain()">Voltar</button>
+</div>
 
 <script>
-const divinos = [
-"Bulbito Bandito Traktorito",
-"Burgerini Bearini",
-"Martino Gravitino",
-"Grappellino D'Oro",
-"Elefante de Morango",
-"Din Din Vaultero",
-"Glacierello Infernetti",
-"Biscotti Macarotti",
-"Galáxia Fantasma",
-"Rubichetto Cubini",
-"Freezeti Cobretti",
-"Cupitron Consoletron"
+const divinoBtn = document.getElementById('divino');
+const infinityBtn = document.getElementById('infinity');
+const mainButtons = document.getElementById('mainButtons');
+
+const divinoTab = document.getElementById('divinoTab');
+const infinityTab = document.getElementById('infinityTab');
+
+const divinoItemsContainer = document.getElementById('divinoItems');
+const infinityItemsContainer = document.getElementById('infinityItems');
+
+const divinoSelected = document.getElementById('divinoSelected');
+const infinitySelected = document.getElementById('infinitySelected');
+
+function backToMain() {
+  divinoTab.style.display = 'none';
+  infinityTab.style.display = 'none';
+  mainButtons.style.display = 'flex';
+  divinoSelected.style.display = 'none';
+  infinitySelected.style.display = 'none';
+}
+
+// Neon ao clicar
+function addNeon(button) {
+  button.classList.add('neon');
+  setTimeout(() => button.classList.remove('neon'), 200);
+}
+
+// Nomes do Divino
+const divinoItems = [
+  'Bulbito Bandito Traktorito',
+  'Burgerini Bearini',
+  'Martino Gravitino',
+  "Grappellino D'Oro",
+  'Strawberry Elephant',
+  'Din Din Vaultero',
+  'Glacierello Infernetti',
+  'Biscotti Macarotti',
+  'Galactio Fantasma',
+  'Rubichetto Cubini',
+  'Freezeti Cobretti',
+  'Cupitron Consoletron'
 ];
 
-divinos.forEach(nome=>{
-document.write(`<button class="item" onclick="mostrarItem('${nome}','3,50')">${nome} - R$3,50</button>`);
+// Cria itens do Divino
+divinoItems.forEach((itemName) => {
+  const btn = document.createElement('button');
+  btn.textContent = `${itemName} - R$3,50`;
+  btn.onclick = () => {
+    divinoSelected.style.display = 'block';
+    divinoSelected.innerHTML = `
+      <h3>Item: ${itemName}</h3>
+      <p>Valor: R$3,50</p>
+      <p>Chave PIX: 56699240889</p>
+      <p><strong>Aviso: Não aceito devolução</strong></p>
+    `;
+  }
+  divinoItemsContainer.appendChild(btn);
 });
-</script>
 
-<button class="back" onclick="voltar()">Voltar</button>
-</div>
-</div>
+// Cria itens do Infinity
+const infinityItems = [
+  {nome:'anabubu', valor:15},
+  {nome:'meta technetta', valor:25},
+  {nome:'nobini infinity', valor:30}
+];
 
-<div id="infinityArea" style="display:none;">
-<div class="box fade">
-<h2>Infinity</h2>
+infinityItems.forEach(item => {
+  const btn = document.createElement('button');
+  btn.textContent = `${item.nome} - R$${item.valor}`;
+  btn.onclick = () => {
+    infinitySelected.style.display = 'block';
+    infinitySelected.innerHTML = `
+      <h3>Item: ${item.nome}</h3>
+      <p>Valor: R$${item.valor}</p>
+      <p>Chave PIX: 56699240889</p>
+      <p><strong>Aviso: Não aceito devolução</strong></p>
+    `;
+  }
+  infinityItemsContainer.appendChild(btn);
+});
 
-<button class="item" onclick="mostrarItem('Anububu','15')">Anububu - R$15</button>
-<button class="item" onclick="mostrarItem('Meta Technetta','25')">Meta Technetta - R$25</button>
-<button class="item" onclick="mostrarItem('Nobini Infinity','40')">Nobini Infinity - R$40</button>
+// Eventos dos botões principais
+divinoBtn.onclick = () => {
+  addNeon(divinoBtn);
+  mainButtons.style.display = 'none';
+  divinoTab.style.display = 'flex';
+};
 
-<button class="back" onclick="voltar()">Voltar</button>
-</div>
-</div>
-
-<div id="itemArea" style="display:none;">
-<div class="box fade">
-<h2 id="itemNome"></h2>
-<p style="font-size:18px;">Valor: <b>R$ <span id="itemPreco"></span></b></p>
-<p><b>PIX:</b> SUA_CHAVE_PIX_AQUI</p>
-<p style="color:#ff4444;">⚠️ Não aceito devolução.</p>
-
-<button class="back" onclick="voltar()">Voltar</button>
-</div>
-</div>
-
-<script>
-function tocarClick(){
-document.getElementById("clickSound").play();
-}
-
-function abrirDivino(){
-tocarClick();
-esconderTudo();
-document.getElementById("divinoArea").style.display="block";
-}
-
-function abrirInfinity(){
-tocarClick();
-esconderTudo();
-document.getElementById("infinityArea").style.display="block";
-}
-
-function mostrarItem(nome,preco){
-document.getElementById("openSound").play();
-esconderTudo();
-document.getElementById("itemNome").innerText = nome;
-document.getElementById("itemPreco").innerText = preco;
-document.getElementById("itemArea").style.display="block";
-}
-
-function voltar(){
-tocarClick();
-esconderTudo();
-document.getElementById("home").style.display="block";
-}
-
-function esconderTudo(){
-document.getElementById("home").style.display="none";
-document.getElementById("divinoArea").style.display="none";
-document.getElementById("infinityArea").style.display="none";
-document.getElementById("itemArea").style.display="none";
-}
+infinityBtn.onclick = () => {
+  addNeon(infinityBtn);
+  mainButtons.style.display = 'none';
+  infinityTab.style.display = 'flex';
+};
 </script>
 
 </body>
